# poetry-dynamic-metadata

./: README.md  pyproject.toml
poetry_dynamic_metadata/: plugin.py
